update icon creation gulp task

--- a/app/index.html
+++ b/app/index.html
@@ -8,10 +8,7 @@
     />
     <title>John Milner Development Portfolio</title>
     <link rel="icon" type="image/png" href="img/projects/icon.png">
-    <link rel="stylesheet" type="text/css" href="temp/fonts/fonts.css">
-    <link rel="stylesheet" href="assets/scss/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/scss/vendor/font-awesome.min.css">
-    <link rel="stylesheet" href="temp/styles/main.css">
+    <link rel="stylesheet" href="temp/styles/styles.css">
     <!-- Props to KNI for design and development inspiration -->
 </head>
 
@@ -100,7 +97,7 @@
                             </span>
                         </h4>
                         <a class="js-scroll-trigger" href="#button-wrapper">
-                            <i class="fa fa-angle-down fa-3x animated flash"></i>
+                            <i class="icon icon--angle-down animated flash"></i>
                         </a>
                         </article>
                     </div>
