change file path for svg icon gulp template sprite.css

--- a/app/index.html
+++ b/app/index.html
@@ -96,9 +96,11 @@
                                 <a href="#button-wrapper" class="hero-btn js-scroll-trigger">View projects »</a>
                             </span>
                         </h4>
-                        <a class="js-scroll-trigger" href="#button-wrapper">
-                            <i class="icon icon--angle-down animated flash"></i>
-                        </a>
+                        <div class="js-scroll-trigger" href="#button-wrapper">
+                            <a href="#" class="animated flash">
+                                <span class="icon icon--angle-down"></span>
+                            </a>
+                        </div>
                         </article>
                     </div>
                 </div>
