adjust header design and add down arrow sprite

--- a/app/index.html
+++ b/app/index.html
@@ -96,11 +96,10 @@
                                 <a href="#button-wrapper" class="hero-btn js-scroll-trigger">View projects »</a>
                             </span>
                         </h4>
-                        <div class="js-scroll-trigger" href="#button-wrapper">
-                            <a href="#" class="animated flash">
-                                <span class="icon icon--angle-down"></span>
+                            <a class="js-scroll-trigger animated flash" href="#button-wrapper">
+                                <i class="icon icon--angle-down"></i>
+                                <!-- <i class="fas fa-angle-down fa-2x"></i> -->
                             </a>
-                        </div>
                         </article>
                     </div>
                 </div>
