update header intro animation

--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
                             <article>
                                 <div class="col-1-of-2">
 
-                                    <div class="composition animated fadeInUp">
+                                    <div class="composition">
                                         <ul id="">
                                             <li>
                                                 <a href="/project.html">
@@ -90,11 +90,8 @@
                                     </div>
                                 </div>
                         </div>
-                        <h4 class="main-headline animated bounceInLeft">I make heavenly UX come alive
-                            <br>
-                            <span>thus enabling greater wealth for U + I.
+                        <h4 class="main-headline animated bounceInLeft">Digital Savoir Faire!
                                 <a href="#button-wrapper" class="hero-btn js-scroll-trigger">View projects »</a>
-                            </span>
                         </h4>
                             <a class="js-scroll-trigger animated flash" href="#button-wrapper">
                                 <i class="icon icon--angle-down"></i>
