update header design and animation

--- a/app/index.html
+++ b/app/index.html
@@ -91,7 +91,7 @@
                                 </div>
                         </div>
                         <h4 class="main-headline animated bounceInLeft">Digital Savoir Faire!
-                                <a href="#button-wrapper" class="hero-btn js-scroll-trigger">View projects »</a>
+                                <!-- <a href="#button-wrapper" class="hero-btn js-scroll-trigger">View projects »</a> -->
                         </h4>
                             <a class="js-scroll-trigger animated flash" href="#button-wrapper">
                                 <i class="icon icon--angle-down"></i>
