add and logic to mixitup filter for project section

--- a/app/index.html
+++ b/app/index.html
@@ -106,11 +106,11 @@
                         <button type="button" class="filter-btn" data-filter=".category-a" >Vanilla Javacript</button>
                         <button type="button" class="filter-btn" data-filter=".category-b">Marketing Sites</button>
                         <button type="button" class="filter-btn" data-filter=".category-c">React</button>
-                        <button type="button" class="filter-btn" data-filter=".category-d">API</button>
+                        <button type="button" class="filter-btn" data-filter=".category-d">API Projects</button>
                     </div>
                     <div id="mix-wrapper">
                         <div class="col-1-of-3">
-                            <figure class="mix-target category-c box box2">
+                            <figure class="mix-target category-c category-d box box2">
                                 <div class="inner-content">
                                     <a href="https://smart-brain-jm.herokuapp.com/" target="_blank" class="project sma">
                                         <div class="copy">
@@ -136,7 +136,7 @@
                             </figure>
                         </div>
                         <div class="col-1-of-3">
-                            <figure class="mix-target category-c box box10">
+                            <figure class="mix-target category-c category-d box box10">
                                 <div class="inner-content">
                                     <a href="https://johnmilner.github.io/Robot-Friends/" target="_blank" class="project rob">
                                         <div class="copy">
@@ -217,7 +217,7 @@
                 </div>
         
                 <div class="col-1-of-3">
-                    <figure class="mix-target category-a box box7">
+                    <figure class="mix-target category-a category-d box box7">
                         <div class="inner-content">
                                 <a href="https://johnmilner.github.io/Patatap/" target="_blank" class="project pat">
                                     <div class="copy"><span>Patatap Clone</span><em>Made with Vanilla Javascript and Howler JS</em></div>
@@ -250,7 +250,7 @@
                 </div>
         
                 <div class="col-1-of-3">
-                        <figure class="mix-target category-d box box9">
+                        <figure class="mix-target category-a category-d box box9">
                             <div class="inner-content">
                                     <a href="https://johnmilner.github.io/Random-User-Generator/" target="_blank" class="project random">
                                         <div class="copy"><span>Random User Generator</span><em>Made with Vanilla Javascript and Random User API</em></div>
