--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"
     />
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
     <title>John Milner Development Portfolio</title>
     <link rel="icon" type="image/png" href="img/projects/icon.png">
     <link rel="stylesheet" href="temp/styles/styles.css">
@@ -60,8 +61,13 @@
                                 </nav>
                             </div>
                             <article>
-                                <div class="col-1-of-2">
-
+                                <div class="tagline">
+                                    <h4 class="main-headline">Digital Savoir Faire!
+                                            <!-- <a href="#button-wrapper" class="hero-btn js-scroll-trigger">View projects »</a> -->
+                                    </h4>
+                                </div>
+                                <div class="col-1-of-1">
+                                    
                                     <div class="composition">
                                         <ul id="">
                                             <li>
@@ -90,9 +96,7 @@
                                     </div>
                                 </div>
                         </div>
-                        <h4 class="main-headline animated bounceInLeft">Digital Savoir Faire!
-                                <!-- <a href="#button-wrapper" class="hero-btn js-scroll-trigger">View projects »</a> -->
-                        </h4>
+                        
                             <a class="js-scroll-trigger animated flash" href="#button-wrapper">
                                 <i class="icon icon--angle-down"></i>
                                 <!-- <i class="fas fa-angle-down fa-2x"></i> -->
