--- a/app/index.html
+++ b/app/index.html
@@ -317,8 +317,8 @@
                                     John Milner is a web developer and digital creative based in San Diego, California. He has award-winning experience working across global and regional campaigns for clients such as Nike, Nokia, Axe (Lynx), Bud Light, Quaker, and Ad Council. He is well-versed across all platforms and believes emotion and story are fundamental to creating fresh brand-driven content and interactions. His work bridges culture, design and technology from interactive, mobile and social to gaming, film and television -- with a focus on creating holistic, engaging and entertaining brand experiences.
                                 </p>
                             </div>
-                            <!-- TIMELINE FOR SPEAKING AND PERFORMANCES -->
-                            <h3 class="ctasp" id="pres">Presentations</h3>
+                            <!-- TIMELINE FOR PROFILE -->
+                            <h3 class="ctasp" id="pres">Background</h3>
 
                             <section id="timeline-wrapper">
                                 <div class="container-fluid">
