add background video to about section and adjust text color

--- a/app/index.html
+++ b/app/index.html
@@ -311,6 +311,13 @@
                     <div class="row">
                         <div class="col-1-of-1">
                             <div id="about" class="about">
+                                <div class="bg-video">
+                                        <video class="bg-video__content" autoplay muted loop>
+                                            <source src="temp/video/love-coding.mp4" type="video/mp4">
+                                            <source src="temp/video/love-coding.webm" type="video/webm">
+                                            Your browser is not supported!
+                                        </video>
+                                </div>
                                 <h3 class="cta">Digital Savoire Faire!</h3>
                                 <div id="profile-foto" class="profile-foto fade-in-up"></div>
                                 <p>
