--- a/app/index.html
+++ b/app/index.html
@@ -105,10 +105,13 @@
                     </div>
                 </div>
                 <div class="col-1-of-1" id="button-wrapper">
+                    <div class="col-1-of-1 projects">
+                        <h5>Projects</h5>
+                    </div>
                     <div class="button-bar">
                         <button  class="filter-btn" data-filter="all">Show all</button>
                         <button type="button" class="filter-btn" data-filter=".category-a" >Vanilla Javacript</button>
-                        <button type="button" class="filter-btn" data-filter=".category-b">Marketing Sites</button>
+                        <button type="button" class="filter-btn" data-filter=".category-b">HTML5/CSS3</button>
                         <button type="button" class="filter-btn" data-filter=".category-c">React</button>
                         <button type="button" class="filter-btn" data-filter=".category-d">API Projects</button>
                     </div>
@@ -324,139 +327,7 @@
                                     John Milner is a web developer and digital creative based in San Diego, California. He has award-winning experience working across global and regional campaigns for clients such as Nike, Nokia, Axe (Lynx), Bud Light, Quaker, and Ad Council. He is well-versed across all platforms and believes emotion and story are fundamental to creating fresh brand-driven content and interactions. His work bridges culture, design and technology from interactive, mobile and social to gaming, film and television -- with a focus on creating holistic, engaging and entertaining brand experiences.
                                 </p>
                             </div>
-                            <!-- TIMELINE FOR PROFILE -->
-                            <h3 class="ctasp" id="pres">Background</h3>
-
-                            <section id="timeline-wrapper">
-                                <div class="container-fluid">
-                                    <div class="row">
-                                        <div class="timeline-top">
-                                            <div class="top-year">2018</span>
-                                            </div>
-
-                                        </div>
-                                        <div class="timeline-block">
-                                            <div class="timeline-events">
-                                                <br>
-                                                <div class="event l-event col-md-6 col-sm-6 col-xs-8 ">
-                                                    <span class="thumb fa fa-codepen"></span>
-                                                    <div class=" event-body">
-                                                        <div class="person-image pull-left ">
-                                                            <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png"
-                                                                alt="person" />
-                                                        </div>
-                                                        <div class="event-content">
-                                                            <h5 class="text-primary text-left">IT-PLUS programming solution </h5>
-                                                            <span class="text-muted text-left" style="display:block; margin: 0">
-                                                                <small>19 October 2016</small>
-                                                            </span>
-                                                            <br>
-                                                            <br>
-                                                            <blockquote class="text-muted text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat
-                                                                ipsum voluptates sapiente beatae non praesentium vitae dolorum
-                                                                qui, reprehenderit harum
-                                                                <br>
-                                                                <cite class="text-muted text-right text-bold">- Alex Martin</cite>
-                                                            </blockquote>
-
-                                                        </div>
-                                                    </div>
-                                                    <!-- end of event body -->
-                                                    <div class="clear-fix"></div>
-                                                </div>
-                                                <!-- end of left event -->
-                                                <div class="row"></div>
-                                                <div class="event r-event col-md-6 col-sm-6 col-xs-8 ">
-                                                    <span class="thumb fa fa-facebook"></span>
-                                                    <div class=" event-body">
-                                                        <div class="person-image pull-left ">
-                                                            <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png"
-                                                                alt="person" />
-                                                        </div>
-                                                        <div class="event-content">
-                                                            <h5 class="text-primary text-left">IT-PLUS programming solution </h5>
-                                                            <span class="text-muted text-left" style="display:block; margin: 0">
-                                                                <small>19 October 2016</small>
-                                                            </span>
-                                                            <br>
-                                                            <br>
-                                                            <blockquote class="text-muted text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat
-                                                                ipsum voluptates sapiente beatae non praesentium vitae dolorum
-                                                                qui, reprehenderit harum
-                                                                <br>
-                                                                <cite class="text-muted text-right text-bold">- Alex Martin</cite>
-                                                            </blockquote>
-
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <!-- end of right event <-->
-                                                <div class="clearfix"></div>
-                                                </-->
-                                                <div class="row"></div>
-                                                <div class="event l-event col-md-6 col-sm-6 col-xs-8 ">
-                                                    <span class="thumb fa fa-twitter"></span>
-                                                    <div class=" event-body">
-                                                        <div class="person-image pull-left ">
-                                                            <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png"
-                                                                alt="person" />
-                                                        </div>
-                                                        <div class="event-content">
-                                                            <h5 class="text-primary text-left">IT-PLUS programming solution </h5>
-                                                            <span class="text-muted text-left" style="display:block; margin: 0">
-                                                                <small>19 October 2016</small>
-                                                            </span>
-                                                            <br>
-                                                            <br>
-                                                            <blockquote class="text-muted text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat
-                                                                ipsum voluptates sapiente beatae non praesentium vitae dolorum
-                                                                qui, reprehenderit harum
-                                                                <br>
-                                                                <cite class="text-muted text-right text-bold">- Alex Martin</cite>
-                                                            </blockquote>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <!-- end of left event <-->
-                                                <div class="clearfix"></div>
-
-                                                <div class="row"></div>
-                                                <div class="event r-event col-md-6 col-sm-6 col-xs-8 ">
-                                                    <span class="thumb fa fa-codepen"></span>
-                                                    <div class=" event-body">
-                                                        <div class="person-image pull-left ">
-                                                            <img src="https://cdn1.iconfinder.com/data/icons/user-pictures/100/male3-512.png"
-                                                                alt="person" />
-                                                        </div>
-                                                        <div class="event-content">
-                                                            <h5 class="text-primary text-left">IT-PLUS programming solution </h5>
-                                                            <span class="text-muted text-left" style="display:block; margin: 0">
-                                                                <small>19 October 2016</small>
-                                                            </span>
-                                                            <br>
-                                                            <br>
-                                                            <blockquote class="text-muted text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat
-                                                                ipsum voluptates sapiente beatae non praesentium vitae dolorum
-                                                                qui, reprehenderit harum
-                                                                <br>
-                                                                <cite class="text-muted text-right text-bold">- Alex Martin</cite>
-                                                            </blockquote>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <!-- end of right event <-->
-                                                <div class="clearfix"></div>
-                                                </-->
-                                            </div>
-                                            <!-- end of timeline events -->
-                                            <div class="clearfix"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </section>
-                        </div>
-                    </div>
-
+                           
                     <div id="contact"></div>
                     <footer class="footer">
                         <div class="footer__logo-box">
