--- a/app/index.html
+++ b/app/index.html
@@ -108,7 +108,7 @@
                         <button type="button" class="filter-btn" data-filter=".category-c">React</button>
                         <button type="button" class="filter-btn" data-filter=".category-d">API Projects</button>
                     </div>
-                    <!-- <div id="mix-wrapper"></div> -->
+                    <div id="mix-wrapper">
                     <div class="row">
                         <div class="col-1-of-3">
                             <figure class="mix-target category-c category-d box box2">
@@ -339,11 +339,11 @@
                                 </div>
                             </figure>
                         </div>
-                        </div>
-                        </div>
+                       </div>
                     </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="about">
                     <div id="about">
@@ -354,7 +354,7 @@
                             </video>
                         </div>
                         <h3 class="cta">Digital Savoire Faire!</h3>
-                        <div id="profile-foto" class="profile-foto fade-in-up"></div>
+                        <div id="profile-foto" class="profile-foto"></div>
                         <p>
                             John Milner is a web developer and digital creative based in San Diego, California. He has award-winning experience working
                             across global and regional campaigns for clients such as Nike, Nokia, Axe (Lynx), Bud Light,
@@ -364,53 +364,64 @@
                             a focus on creating holistic, engaging and entertaining brand experiences.
                         </p>
                     </div>
-                  </div>
-                </div>
-
-                    <div id="contact"></div>
-                    <footer class="footer">
-                            <div class="row">
-                                <div class="col-1-of-2">
-                                    <div class="footer__navigation">
-                                        <ul class="footer__list">
-                                            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
-                                            <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
-                                            <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
-                                            <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
-                                            <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="col-1-of-2">
-                                    <p class="footer__copyright">
-                                        Built by <a href="#" class="footer__link">Jonas Schmedtmann</a> for his online course <a href="#" class="footer__link">Advanced CSS and Sass</a>.
-                                        Copyright &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both personal
-                                        and commercial use, but NOT to claim it as your own design. A credit to the original author, Jonas
-                                        Schmedtmann, is of course highly appreciated!
-                                    </p>
-                                </div>
-                                <div class="footer__logo-box">
-                                    <div class="envelope-wrapper">
-                                    <div class="envelope">
-                                        <div class="envelope-top"></div>
-                                        <div class="card"> 
-                                        <form>
-                                            <input class="name-input" placeholder="Your Email" name="author" type="text" value="" >
-                                            <textarea class="comment" class="message-content" name="comment" placeholder="you da best" aria-required="true"></textarea>
-                                        </form>
-                                        </div>
-                                        </div>
-                                    <span class="email-button">email me </span>
-                                    </div>
-                                 </div>
-                            </div>
-                        </footer>
                 </div>
             </div>
-        </div>
 
-        <script type="text/javascript" src="temp/scripts/modernizr.js"></script>
-        <script type="text/javascript" src="temp/scripts/bundles--entry.js"></script>
+            <div id="contact"></div>
+            <footer class="footer">
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <div class="footer__navigation">
+                            <ul class="footer__list">
+                                <li class="footer__item">
+                                    <a href="#" class="footer__link">Company</a>
+                                </li>
+                                <li class="footer__item">
+                                    <a href="#" class="footer__link">Contact us</a>
+                                </li>
+                                <li class="footer__item">
+                                    <a href="#" class="footer__link">Carrers</a>
+                                </li>
+                                <li class="footer__item">
+                                    <a href="#" class="footer__link">Privacy policy</a>
+                                </li>
+                                <li class="footer__item">
+                                    <a href="#" class="footer__link">Terms</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-1-of-2">
+                        <p class="footer__copyright">
+                            Built by
+                            <a href="#" class="footer__link">Jonas Schmedtmann</a> for his online course
+                            <a href="#" class="footer__link">Advanced CSS and Sass</a>. Copyright &copy; by Jonas Schmedtmann. You are 100% allowed to use
+                            this webpage for both personal and commercial use, but NOT to claim it as your own design. A
+                            credit to the original author, Jonas Schmedtmann, is of course highly appreciated!
+                        </p>
+                    </div>
+                    <div class="footer__logo-box">
+                        <div class="envelope-wrapper">
+                            <div class="envelope">
+                                <div class="envelope-top"></div>
+                                <div class="card">
+                                    <form>
+                                        <input class="name-input" placeholder="Your Email" name="author" type="text" value="">
+                                        <textarea class="comment" class="message-content" name="comment" placeholder="you da best" aria-required="true"></textarea>
+                                    </form>
+                                </div>
+                            </div>
+                            <span class="email-button">email me </span>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+        </div>
+    </div>
+   
+
+    <script type="text/javascript" src="temp/scripts/modernizr.js"></script>
+    <script type="text/javascript" src="temp/scripts/bundles--entry.js"></script>
 </body>
 
 </html>
