add index.html link to project.html header

--- a/app/project.html
+++ b/app/project.html
@@ -68,7 +68,7 @@
                 </div>
                 <div id="button-wrapper">
                     <div class="projects">
-                        <h5>Projects</h5>
+                        <h5><a href="index.html">Back to index.html</a></h5>
                     </div>
                     <div class="button-bar">
                         <button class="filter-btn" data-filter="all">Show all</button>
@@ -156,7 +156,7 @@
    
 
     <script type="text/javascript" src="temp/scripts/modernizr.js"></script>
-    <script type="text/javascript" src="temp/scripts/bundles--entry.js"></script>
+    <!-- <script type="text/javascript" src="temp/scripts/bundles--entry.js"></script> -->
 </body>
 
 </html>
