adjust header, footer, button mouseover and add header bckgrd image

--- a/app/project.html
+++ b/app/project.html
@@ -156,7 +156,7 @@
    
 
     <script type="text/javascript" src="temp/scripts/modernizr.js"></script>
-    <!-- <script type="text/javascript" src="temp/scripts/bundles--entry.js"></script> -->
+    <script type="text/javascript" src="temp/scripts/bundles--entry.js"></script>
 </body>
 
 </html>
