--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"
     />
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' 
+    rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <title>John Milner Development Portfolio</title>
     <link rel="icon" type="image/png" href="img/projects/icon.png">
     <link rel="stylesheet" href="temp/styles/styles.css">
@@ -370,28 +372,37 @@
             <div id="contact"></div>
             <footer class="footer">
                 <div class="row">
-                    <div class="col-1-of-2">
+                    <div class="col-1-of-3">
                         <div class="footer__navigation">
-                            <ul class="footer__list">
-                                <li class="footer__item">
-                                    <a href="#" class="footer__link">Company</a>
+                            <ul class="footer__list"><li class="footer__item">
+                                    <a href="#" class="footer__link">Contact me</a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link">Contact us</a>
+                                    <a href="#" class="footer__link">LinkedIn</a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link">Carrers</a>
-                                </li>
-                                <li class="footer__item">
-                                    <a href="#" class="footer__link">Privacy policy</a>
-                                </li>
-                                <li class="footer__item">
-                                    <a href="#" class="footer__link">Terms</a>
+                                    <a href="#" class="footer__link">Twitter</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-1-of-2">
+                    <div class="col-1-of-3">
+                        <div class="footer__logo-box">
+                            <div class="envelope-wrapper">
+                                <div class="envelope">
+                                    <div class="envelope-top"></div>
+                                    <div class="card">
+                                        <form>
+                                            <input class="name-input" placeholder="Your Email" name="author" type="text" value="">
+                                            <textarea class="comment" class="message-content" name="comment" placeholder="you da best" aria-required="true"></textarea>
+                                        </form>
+                                    </div>
+                                </div>
+                                <span class="email-button">email me </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
                         <p class="footer__copyright">
                             Built by
                             <a href="#" class="footer__link">Jonas Schmedtmann</a> for his online course
@@ -400,20 +411,7 @@
                             credit to the original author, Jonas Schmedtmann, is of course highly appreciated!
                         </p>
                     </div>
-                    <div class="footer__logo-box">
-                        <div class="envelope-wrapper">
-                            <div class="envelope">
-                                <div class="envelope-top"></div>
-                                <div class="card">
-                                    <form>
-                                        <input class="name-input" placeholder="Your Email" name="author" type="text" value="">
-                                        <textarea class="comment" class="message-content" name="comment" placeholder="you da best" aria-required="true"></textarea>
-                                    </form>
-                                </div>
-                            </div>
-                            <span class="email-button">email me </span>
-                        </div>
-                    </div>
+                    
                 </div>
             </footer>
         </div>
