--- a/app/index.html
+++ b/app/index.html
@@ -54,8 +54,7 @@
                                             <a href="#contact" class="navigation__link">
                                                 <span>04</span>Contact</a>
                                         </li>
-
-                                    </ul>
+                                     </ul>
                                 </nav>
                             </div>
                             <article>
@@ -375,13 +374,19 @@
                     <div class="col-1-of-3">
                         <div class="footer__navigation">
                             <ul class="footer__list"><li class="footer__item">
-                                    <a href="#" class="footer__link">Contact me</a>
+                                    <a href="#" class="footer__link">
+                                        <i class="icon icon--medium"></i>
+                                    </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link">LinkedIn</a>
+                                    <a href="#" class="footer__link">
+                                        <i class="icon icon--linkedin-in"></i>
+                                    </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link">Twitter</a>
+                                    <a href="#" class="footer__link">
+                                        <i class="icon icon--twitter"></i>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -404,11 +409,8 @@
                     </div>
                     <div class="col-1-of-3">
                         <p class="footer__copyright">
-                            Built by
-                            <a href="#" class="footer__link">Jonas Schmedtmann</a> for his online course
-                            <a href="#" class="footer__link">Advanced CSS and Sass</a>. Copyright &copy; by Jonas Schmedtmann. You are 100% allowed to use
-                            this webpage for both personal and commercial use, but NOT to claim it as your own design. A
-                            credit to the original author, Jonas Schmedtmann, is of course highly appreciated!
+                            Built from scratch by <a href="#" class="footer__link">John Milner</a>,
+                            using HTML5, CSS3, Vanilla Javascript and various JS libraries.
                         </p>
                     </div>
                     
