--- a/app/index.html
+++ b/app/index.html
@@ -373,22 +373,11 @@
                 <div class="row">
                     <div class="col-1-of-3">
                         <div class="footer__navigation">
-                            <ul class="footer__list"><li class="footer__item">
-                                    <a href="#" class="footer__link">
-                                        <i class="icon icon--medium"></i>
-                                    </a>
-                                </li>
-                                <li class="footer__item">
-                                    <a href="#" class="footer__link">
-                                        <i class="icon icon--linkedin-in"></i>
-                                    </a>
-                                </li>
-                                <li class="footer__item">
-                                    <a href="#" class="footer__link">
-                                        <i class="icon icon--twitter"></i>
-                                    </a>
-                                </li>
-                            </ul>
+                                <div class="social-icons">
+                                        <a href="#" class="social-icons__icon"><span class="icon icon--twitter"></span></a>
+                                        <a href="#" class="social-icons__icon"><span class="icon icon--linkedin-in"></span></a>
+                                        <a href="#" class="social-icons__icon"><span class="icon icon--medium"></span></a>
+                                   </div>
                         </div>
                     </div>
                     <div class="col-1-of-3">
