add github social icon and adjust icons sizes

--- a/app/index.html
+++ b/app/index.html
@@ -377,6 +377,7 @@
                                         <a href="#" class="social-icons__icon"><span class="icon icon--twitter"></span></a>
                                         <a href="#" class="social-icons__icon"><span class="icon icon--linkedin-in"></span></a>
                                         <a href="#" class="social-icons__icon"><span class="icon icon--medium"></span></a>
+                                        <a href="#" class="social-icons__icon"><span class="icon icon--github"></span></a>
                                    </div>
                         </div>
                     </div>
@@ -399,7 +400,7 @@
                     <div class="col-1-of-3">
                         <p class="footer__copyright">
                             Built from scratch by <a href="#" class="footer__link">John Milner</a>,
-                            using HTML5, CSS3, Vanilla Javascript and various JS libraries.
+                            using HTML5, CSS3, Vanilla Javascript, BarbaJS, MixItUp and Jquery.
                         </p>
                     </div>
                     
