refactor angle-down icon html and css

--- a/app/index.html
+++ b/app/index.html
@@ -90,11 +90,11 @@
                                     </div>
                                 </div>
                         </div>
-
+                        <div class="social-icons">
                         <a class="js-scroll-trigger animated flash" href="#button-wrapper">
-                            <i class="icon icon--angle-down"></i>
-                            <!-- <i class="fas fa-angle-down fa-2x"></i> -->
+                            <span class="icon icon--angle-down"></span>
                         </a>
+                        </div>
                         </article>
                     </div>
                 </div>
