implement mail icon in footer

--- a/app/index.html
+++ b/app/index.html
@@ -371,36 +371,43 @@
             <div id="contact"></div>
             <footer class="footer">
                 <div class="row">
-                    <div class="col-1-of-3">
+                    <div class="col-1-of-2">
                         <div class="footer__navigation">
                                 <div class="social-icons">
-                                        <a href="#" class="social-icons__icon"><span class="icon icon--twitter"></span></a>
-                                        <a href="#" class="social-icons__icon"><span class="icon icon--linkedin-in"></span></a>
-                                        <a href="#" class="social-icons__icon"><span class="icon icon--medium"></span></a>
-                                        <a href="#" class="social-icons__icon"><span class="icon icon--github"></span></a>
+                                        <a href="https://twitter.com/_johnio" target="_blank" class="social-icons__icon"><span class="icon icon--twitter"></span></a>
+                                        <a href="https://linkedin.com/in/johnmilnerio" target="_blank" class="social-icons__icon"><span class="icon icon--linkedin-in"></span></a>
+                                        <a href="https://medium.com/@johnmilner" target="_blank" class="social-icons__icon"><span class="icon icon--medium"></span></a>
+                                        <a href="https://github.com/johnmilner" target="_blank" class="social-icons__icon"><span class="icon icon--github"></span></a>
+                                        <a href="mailto: john.milner@mac.com" target="_blank" class="social-icons__icon"><span class="icon icon--envelope"></span></a>
                                    </div>
                         </div>
                     </div>
-                    <div class="col-1-of-3">
+                    <!-- <div class="col-1-of-3">
                         <div class="footer__logo-box">
                             <div class="envelope-wrapper">
                                 <div class="envelope">
                                     <div class="envelope-top"></div>
                                     <div class="card">
-                                        <form>
-                                            <input class="name-input" placeholder="Your Email" name="author" type="text" value="">
-                                            <textarea class="comment" class="message-content" name="comment" placeholder="you da best" aria-required="true"></textarea>
+                                        <form form action="https://johnmilner.us12.list-manage.com/subscribe/post" method="POST">
+                                        <input type="hidden" name="u" value="949b7152f5441427c5ed9e09c">
+                                        <input type="hidden" name="id" value="0478214c0d">
+                                            <input class="name-input" type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" placeholder="Your email" value="">
+                                            <textarea type="text" name="MERGE7" id="MERGE7" size="25" value="" placeholder="you da best" aria-required="true"></textarea>
                                         </form>
                                     </div>
                                 </div>
-                                <span class="email-button">email me </span>
+                                <span class="email-button">
+                                    <input type="submit" class="formEmailButton" name="submit" value="Email Me"> 
+                                    <input type="hidden" name="ht" value="60bce4d8fc8c4535a9f5b87d9bab813080f27170:MTUyMTA3MTMzOS45MzAx">
+                                    <input type="hidden" name="mc_signupsource" value="hosted">
+                                </span>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-1-of-3">
+                    </div> -->
+                    <div class="col-1-of-2">
                         <p class="footer__copyright">
-                            Built from scratch by <a href="#" class="footer__link">John Milner</a>,
-                            using HTML5, CSS3, Vanilla Javascript, BarbaJS, MixItUp and Jquery.
+                            Built from scratch with love by <a href="#" class="footer__link">John Milner</a>,
+                            using HTML5, CSS3, Vanilla Javascript and Jquery.
                         </p>
                     </div>
                     
