--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,10 @@
     rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <title>John Milner Development Portfolio</title>
-    <link rel="icon" type="image/png" href="img/projects/icon.png">
+    <link rel="icon" type="image/png" href="assets/images/icon.png">
+    <!-- build:css /assets/styles/styles.css -->
     <link rel="stylesheet" href="temp/styles/styles.css">
-    <!-- Props to KNI for design and development inspiration -->
+    <!-- endbuild -->
 </head>
 
 <body>
@@ -330,8 +331,8 @@
                     <div id="about">
                         <div class="bg-video">
                             <video class="bg-video__content" autoplay muted loop>
-                                <source src="temp/video/love-coding.mp4" type="video/mp4">
-                                <source src="temp/video/love-coding.webm" type="video/webm"> Your browser is not supported!
+                                <source src="assets/video/love-coding.mp4" type="video/mp4">
+                                <source src="assets/video/love-coding.webm" type="video/webm"> Your browser is not supported!
                             </video>
                         </div>
                         <h3 class="cta">Digital Savoire Faire!</h3>
@@ -396,9 +397,10 @@
         </div>
     </div>
    
-
-    <script type="text/javascript" src="temp/scripts/modernizr.js"></script>
-    <script type="text/javascript" src="temp/scripts/bundles--entry.js"></script>
+    <!-- build:js /assets/scripts/bundles--entry.js -->
+    <script src="temp/scripts/bundles--entry.js"></script>
+    <!-- endbuild -->
+    
 </body>
 
 </html>
