add css preloader and refactor App.js into App.js and Vendor.js

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,9 @@
     <!-- build:css /assets/styles/styles.css -->
     <link rel="stylesheet" href="temp/styles/styles.css">
     <!-- endbuild -->
+    <!-- build:js /assets/scripts/Vendor.js -->
+    <link rel="stylesheet" href="temp/scripts/Vendor.js">
+    <!-- endbuild -->
 </head>
 
 <body>
@@ -21,6 +24,10 @@
         <div class="barba-container">
             <div class="container" id="home">
                 <div class="row">
+                    <div class="spinner">
+                            <div class="double-bounce1"></div>
+                            <div class="double-bounce2"></div>
+                    </div>
                     <div class="box1">
                             <div class="navigation" id="navigation">
                                 <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
@@ -397,8 +404,8 @@
         </div>
     </div>
    
-    <!-- build:js /assets/scripts/bundles--entry.js -->
-    <script src="temp/scripts/bundles--entry.js"></script>
+    <!-- build:js /assets/scripts/App.js -->
+    <script src="temp/scripts/App.js"></script>
     <!-- endbuild -->
     
 </body>
