--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="temp/styles/styles.css">
     <!-- endbuild -->
     <!-- build:js /assets/scripts/Vendor.js -->
-    <link rel="stylesheet" href="temp/scripts/Vendor.js">
+    <script src="temp/scripts/Vendor.js"></script>
     <!-- endbuild -->
 </head>
 
@@ -403,6 +403,7 @@
             </footer>
         </div>
     </div>
+    
    
     <!-- build:js /assets/scripts/App.js -->
     <script src="temp/scripts/App.js"></script>
