adjust relative paths in index.html, and for bckgrd image

--- a/app/index.html
+++ b/app/index.html
@@ -11,10 +11,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <title>John Milner Development Portfolio</title>
     <link rel="icon" type="image/png" href="assets/images/icon.png">
-    <!-- build:css /assets/styles/styles.css -->
+    <!-- build:css assets/styles/styles.css -->
     <link rel="stylesheet" href="temp/styles/styles.css">
     <!-- endbuild -->
-    <!-- build:js /assets/scripts/Vendor.js -->
+    <!-- build:js assets/scripts/Vendor.js -->
     <script src="temp/scripts/Vendor.js"></script>
     <!-- endbuild -->
 </head>
@@ -405,7 +405,7 @@
     </div>
     
    
-    <!-- build:js /assets/scripts/App.js -->
+    <!-- build:js assets/scripts/App.js -->
     <script src="temp/scripts/App.js"></script>
     <!-- endbuild -->
     
