add row to index.html for projects and button bar

--- a/app/index.html
+++ b/app/index.html
@@ -86,10 +86,12 @@
                         </article>
                     </div>
                 </div>
-                <div id="button-wrapper">
+                <div class="row">
                     <div class="projects">
                         <h5>Projects</h5>
                     </div>
+                
+                <div id="button-wrapper">
                     <div class="button-bar">
                         <button class="filter-btn" data-filter="all">Show all</button>
                         <button type="button" class="filter-btn" data-filter=".category-a">Vanilla Javacript</button>
@@ -97,6 +99,7 @@
                         <button type="button" class="filter-btn" data-filter=".category-c">React</button>
                         <button type="button" class="filter-btn" data-filter=".category-d">API Projects</button>
                     </div>
+                </div>
                     <div id="mix-wrapper">
                     <div class="row">
                         <div class="col-1-of-3">
