implement css loading animation and tagline fadein

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
     <title>John Milner Development Portfolio</title>
     <link rel="icon" type="image/png" href="assets/images/icon.png">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <!-- build:css assets/styles/styles.css -->
     <link rel="stylesheet" href="temp/styles/styles.css">
     <!-- endbuild -->
@@ -30,6 +31,17 @@
                             <div class="double-bounce1"></div>
                             <div class="double-bounce2"></div>
                     </div>
+                    <!-- <div class="spinner">
+                        <h1 class="ml8">
+                            <span class="letters-container">
+                            <span class="letters letters-left">Hi</span>
+                            <span class="letters bang">!</span>
+                            </span>
+                            <span class="circle circle-white"></span>
+                            <span class="circle circle-dark"></span>
+                            <span class="circle circle-container"><span class="circle circle-dark-dashed"></span></span>
+                        </h1>
+                    </div> -->
                     <div class="box1">
                             <div class="navigation" id="navigation">
                                 <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
@@ -408,7 +420,8 @@
         </div>
     </div>
     
-   
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script> -->
+
     <!-- build:js assets/scripts/App.js -->
     <script src="temp/scripts/App.js"></script>
     <!-- endbuild -->
