--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
                                                 <span>01</span>Home</a>
                                         </li>
                                         <li class="navigation__item js-scroll-trigger">
-                                            <a href="#button-wrapper" class="navigation__link">
+                                            <a href="#projects" class="navigation__link">
                                                 <span>02</span>Projects</a>
                                         </li>
 
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="projects">
+                    <div class="projects" id="projects">
                         <h5>Projects</h5>
                     </div>
                 
@@ -349,9 +349,8 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row" id="about">
                 <div class="about">
-                    <div id="about">
                         <div class="bg-video">
                             <video class="bg-video__content" autoplay muted loop>
                                 <source src="assets/video/love-coding.mp4" type="video/mp4">
@@ -368,7 +367,6 @@
                             design and technology from interactive, mobile and social to gaming, film and television -- with
                             a focus on creating holistic, engaging and entertaining brand experiences.
                         </p>
-                    </div>
                 </div>
             </div>
 
