add new header bckgrd foto and add text to footer

--- a/app/index.html
+++ b/app/index.html
@@ -7,13 +7,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"
     />
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Raleway:800' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:800,100' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
     <title>John Milner Development Portfolio</title>
     <link rel="icon" type="image/png" href="assets/images/icon.png">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <!-- build:css assets/styles/styles.css -->
     <link rel="stylesheet" href="temp/styles/styles.css">
     <!-- endbuild -->
@@ -31,17 +28,6 @@
                         <div class="double-bounce1"></div>
                         <div class="double-bounce2"></div>
                     </div>
-                    <!-- <div class="spinner">
-                        <h1 class="ml8">
-                            <span class="letters-container">
-                            <span class="letters letters-left">Hi</span>
-                            <span class="letters bang">!</span>
-                            </span>
-                            <span class="circle circle-white"></span>
-                            <span class="circle circle-dark"></span>
-                            <span class="circle circle-container"><span class="circle circle-dark-dashed"></span></span>
-                        </h1>
-                    </div> -->
                     <div class="box1">
                         <div class="navigation" id="navigation">
                             <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
@@ -55,7 +41,15 @@
                             <nav class="navigation__nav">
                                 <ul class="navigation__list">
                                     <li class="navigation__item nav-logo">
-                                        <a></a>
+                                            <!-- <h1 class="ml8">
+                                                    <span class="letters-container">
+                                                    <span class="letters letters-left">Hi</span>
+                                                    <span class="letters bang">!</span>
+                                                    </span>
+                                                    <span class="circle circle-white"></span>
+                                                    <span class="circle circle-dark"></span>
+                                                    <span class="circle circle-container"><span class="circle circle-dark-dashed"></span></span>
+                                            </h1>  -->
                                     </li>
                                     <li class="navigation__item js-scroll-trigger">
                                         <a href="#home" class="navigation__link">
@@ -84,7 +78,7 @@
                                 <h1 class="main-headline-r2">John Milner</h1>
                             </div>
                                 <a class="js-scroll-trigger" href="#button-wrapper">
-                                    <span class="icon icon--angle-down animated bounceInUp"></span>
+                                    <span class="icon icon--angle-down animated pulse infinite"></span>
                                 </a>
                         </article>
                     </div>
@@ -340,7 +334,7 @@
             </div>
 
             <div class="row" id="about">
-                <div class="about">
+                <div class="about"> 
                     <div class="bg-video">
                         <video class="bg-video__content" autoplay muted loop>
                             <source src="assets/video/love-coding.mp4" type="video/mp4">
@@ -387,16 +381,17 @@
                     <div class="col-1-of-2">
                         <p class="footer__copyright">
                                 Built from scratch with<span class="icon icon--heart"></span> by
-                                John Milner, using HTML5, CSS3, Vanilla Javascript and JQuery.
-                        </p>      
+                                John Milner, using HTML5, CSS3, Vanilla Javascript and JQuery. Want to collaborate on a big project? Just here to say hi?
+                                Whatever the reason, feel free to contact me! 
+                                <a href="#" class="footer__link">Let's Talk!</a>
+                        </p>  
+                          
                     </div>
                 </div>
             </footer>
             
         </div>
     </div>
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script> -->
 
     <!-- build:js assets/scripts/App.js -->
     <script src="temp/scripts/App.js"></script>
