adjust angle-down and heart icon animation and about section video opacity

--- a/app/index.html
+++ b/app/index.html
@@ -79,10 +79,11 @@
                             <div class="tagline">
                                 <h1 class="main-headline-r1">Full-Stack Web Developer</h1>
                                 <h1 class="main-headline-r2">John Milner</h1>
-                            </div>
+                            
                                 <a class="js-scroll-trigger" href="#button-wrapper">
-                                    <span class="icon icon--angle-down animated pulse infinite"></span>
+                                    <span class="icon icon--angle-down animated fadeOutDown infinite"></span>
                                 </a>
+                            </div>
                         </article>
                     </div>
                 </div>
@@ -383,7 +384,7 @@
                     </div>
                     <div class="col-1-of-2">
                         <p class="footer__copyright">
-                                Built from scratch with<span class="icon icon--heart"></span> by
+                                Built from scratch with<span class="icon icon--heart animated pulse infinite"></span> by
                                 John Milner, using HTML5, CSS3, Vanilla Javascript and JQuery. Want to collaborate on a big project? Just here to say hi?
                                 Whatever the reason, feel free to contact me! 
                                 <a href="#" class="footer__link">Let's Talk!</a>
