change project box font title to source sans pro and refactor project link html and css

--- a/app/index.html
+++ b/app/index.html
@@ -98,9 +98,9 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="projects animated pulse infinite" id="projects">
+                    <div class="projects" id="projects">
                         <a class="js-scroll-trigger" href="#button-wrapper">
-                            <h5>Projects</h5>
+                            <h5 class="animated pulse infinite">Projects</h5>
                         </a>
                     </div>
 
