implement morphing nav overlay

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
                         <nav class="navigation__nav">
                             <ul class="navigation__list">
                                 <li class="navigation__item nav-logo">
-                                        
+                                    &nbsp;    
                                 </li>
                                 <li class="navigation__item js-scroll-trigger">
                                     <a href="#home" class="navigation__link">
@@ -71,7 +71,12 @@
                                         <span>04</span>Contact</a>
                                 </li>
                             </ul>
+                            <svg class="shape-overlays" viewBox="0 0 100 100" preserveAspectRatio="none">
+                                <path class="shape-overlays__path"></path>
+                                <path class="shape-overlays__path"></path>
+                            </svg>
                         </nav>
+                        
                     </div>
                     <div class="box1">
                         <div class="content">
