--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,8 @@
     />
     <link href='https://fonts.googleapis.com/css?family=Raleway:800,100' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
-    <title>John Milner Development Portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,500" rel="stylesheet">
+    <title>John Milner Web Development Portfolio</title>
     <link rel="icon" type="image/png" href="assets/images/icon.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
@@ -94,7 +95,8 @@
                             <div class="tagline">
                                 <h1 class="main-headline-r1">Full-Stack Web Developer</h1>
                                 <h1 class="main-headline-r2">John Milner</h1>
-                            
+                                <h1 class="main-headline-r3">I design and build digital products.</h1>
+
                                 <!-- <a class="js-scroll-trigger" href="#button-wrapper">
                                     <span class="icon icon--angle-down animated fadeOutDown infinite"></span>
                                 </a> -->
