adjust typography for header

--- a/app/index.html
+++ b/app/index.html
@@ -93,9 +93,9 @@
                         </div>
                         <article>
                             <div class="tagline">
-                                <h1 class="main-headline-r1">Full-Stack Web Developer</h1>
+                                <h1 class="main-headline-r1">Front-End Web Developer</h1>
                                 <h1 class="main-headline-r2">John Milner</h1>
-                                <h1 class="main-headline-r3">I design and build digital products.</h1>
+                                
 
                                 <!-- <a class="js-scroll-trigger" href="#button-wrapper">
                                     <span class="icon icon--angle-down animated fadeOutDown infinite"></span>
@@ -377,7 +377,7 @@
                             <source src="assets/video/love-coding.webm" type="video/webm"> Your browser is not supported!
                         </video>
                     </div>
-                    <h3 class="cta">Digital Savoire Faire!</h3>
+                    <h3 class="cta">I design and build digital products.</h3>
                     <div id="profile-foto" class="profile-foto"></div>
                     <p class="bio">
                         John Milner is a web developer and digital creative based in San Diego, California. He has award-winning experience working
