implement modal overlay with toggle on projects button

--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
                                 <a class="global-menu__item global-menu__item--demo-4 nav-logo" href="#"></a>
                                 
                                 <a class="global-menu__item global-menu__item--demo-4" href="#home">Home</a>
-                                <a class="global-menu__item global-menu__item--demo-4" href="#button-wrapper">Projects</a>
+                                <a class="global-menu__item global-menu__item--demo-4" href="#projects">Projects</a>
                                 <a class="global-menu__item global-menu__item--demo-4" href="#about">About</a>
                                 <a class="global-menu__item global-menu__item--demo-4" href="#contact">Contact</a>
                             </div>
@@ -140,8 +140,9 @@
                         </article>
                     </div>
                 </div>
+                <div id="projects"></div>
                 <div class="row">
-                    <div class="projects" id="projects">
+                    <div class="projects">
                         <a class="js-scroll-trigger" href="#button-wrapper">
                             <h5 class="animated pulse infinite">Projects</h5>
                         </a>
