implement menu open and hover animations

--- a/app/index.html
+++ b/app/index.html
@@ -93,13 +93,11 @@
                             </div>
                             <div class="global-menu">
                                 <div class="global-menu__wrap">
-
-                                    <a class="global-menu__item global-menu__item--demo-4 nav-logo" href="#"></a>
-
-                                    <a class="global-menu__item global-menu__item--demo-4" href="#home">Home</a>
-                                    <a class="global-menu__item global-menu__item--demo-4" href="#projects">Projects</a>
-                                    <a class="global-menu__item global-menu__item--demo-4" href="#about">About</a>
-                                    <a class="global-menu__item global-menu__item--demo-4" href="#contact">Contact</a>
+                                    <a class="global-menu__item nav-logo" href="#"></a>
+                                    <a class="global-menu__item global-menu__item--demo-4 global-menu__item__link" href="#home"><span>01</span>Home</a>
+                                    <a class="global-menu__item global-menu__item--demo-4 global-menu__item__link" href="#projects"><span>02</span>Projects</a>
+                                    <a class="global-menu__item global-menu__item--demo-4 global-menu__item__link" href="#about"><span>03</span>About</a>
+                                    <a class="global-menu__item global-menu__item--demo-4 global-menu__item__link" href="#contact"><span>04</span>Contact</a>
                                 </div>
                             </div>
                             <svg class="shape-overlays" viewBox="0 0 100 100" preserveAspectRatio="none">
