implement ta-overlay with morphing bg menu transition with nav-link and hamburger buttons working

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
                             <div class="menu-animation-wrapper">
                                 <div class="menu-animated-background"></div>
                             </div>
-                            <a href="/" class="menu">
+                            <a class="menu">
                                 <span class="menu-icon-line-1 menu-icon-line"></span>
                                 <span class="menu-icon-line-2 menu-icon-line"></span>
                                 <span class="menu-icon-line-3 menu-icon-line"></span>
@@ -58,7 +58,7 @@
     
                                     <ul class="nav-categories">
                                         <li class="nav-category js-nav-animate">
-                                            <a href="/" class="nav-link">Home</a>
+                                            <a href="#home" class="nav-link">Home</a>
                                         </li>
                                         <li class="nav-category js-nav-animate">
                                             <a href="#projects" class="nav-link">Projects</a>
