adjust animejs javascript to prevent pixel shake on overlay menu animate in

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
                             <div class="menu-animation-wrapper">
                                 <div class="menu-animated-background"></div>
                             </div>
-                            <a class="menu">
+                            <a class="menu animated pulse infinite">
                                 <span class="menu-icon-line-1 menu-icon-line"></span>
                                 <span class="menu-icon-line-2 menu-icon-line"></span>
                                 <span class="menu-icon-line-3 menu-icon-line"></span>
@@ -129,7 +129,7 @@
                         <div id="projects"></div>
                         <div class="projects">
                             <a class="js-scroll-trigger" href="#button-wrapper">
-                                <h5 class="animated pulse infinite">Projects</h5>
+                                <h5 class="">Projects</h5>
                             </a>
                         </div>
 
