remove footer-reveal.js from App.js

--- a/app/index.html
+++ b/app/index.html
@@ -392,8 +392,8 @@
                 </section>
 
 
-                <div class="row" id="about">
-                    <div class="about">
+                <div class="row">
+                    <div class="about" id="about">
                         <div class="bg-video">
                             <video class="bg-video__content" autoplay muted loop>
                                 <source src="assets/video/love-coding.mp4" type="video/mp4">
