implement revealing footer with css and adjust content design for footer

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <div id="barba-wrapper">
         <div class="barba-container">
             <div class="container" id="home">
+                <div id="body-content-wrapper">
                 <div class="row">
                     <div class="spinner">
                         <h1 class="ml8">
@@ -412,9 +413,10 @@
                         </p>
                     </div>
                 </div>
-
+            </div>
                 <div id="contact"></div>
-                <footer class="footer">
+                <footer>
+                    <section class="footer">
                     <div class="row">
                         <div class="col-1-of-2">
                             <div class="footer__navigation">
@@ -447,6 +449,7 @@
 
                         </div>
                     </div>
+                </section>
                 </footer>
 
             </div>
